# Aurix

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
context/: ARCHITECTURE.md  INSIGHTS.md  PRESENTATION_PHILOSOPHY.md  SHARED_ANALYTICS_CORE.md  TUI_SURFACE.md  _staleness-report.md  architecture.md  notes.md  plans.md
context/notes/: dex-name-contract.md  error-handling.md  free-data-fallback-chain.md  idempotent-runs.md  (+7 more)
learning/: GLOSSARY.md  LEARNING_MAP.md  STUDY_GUIDE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/backtest/: engine.rs  error.rs  gas.rs  metrics.rs  mod.rs  position.rs  price.rs  rebalance.rs
src-tauri/src/benchmarks/: alpha.rs  beaconchain.rs  defi.rs  error.rs  http.rs  mod.rs  tradfi.rs  v2lp.rs
src-tauri/src/commands/: lp.rs  market.rs  mod.rs  telemetry.rs
src-tauri/src/config/: chains.rs  mod.rs  pairs.rs  rpc.rs  runtime.rs  tokens.rs  venues.rs
src-tauri/src/dex/: uniswap_v2.rs  uniswap_v3.rs
src-tauri/src/ethereum/: client.rs
src-tauri/src/headline/: error.rs  mod.rs  regime.rs  verdict.rs
src-tauri/src/ingest/: alchemy.rs  decoder.rs  error.rs  mock.rs  mod.rs  pipeline.rs  source.rs  subgraph.rs
src-tauri/src/market/: types.rs
src-tauri/src/math/: error.rs  fees.rs  il.rs  liquidity.rs  mod.rs  q96.rs  tick.rs
src-tauri/src/storage/: benchmarks.rs  connection.rs  error.rs  gas.rs  headline.rs  migrations.rs  mod.rs  pool_events.rs  runs.rs  snapshots.rs  state.rs  strategy.rs  swaps.rs
src-tauri/src/storage/migrations/: V001__initial_schema.sql  V002__multi_asset_headline.sql
src-tauri/src/strategies/: error.rs  grid.rs  mod.rs
src-tauri/src/validation/: error.rs  mod.rs  synthetic.rs
(+204 files in other folders)
