[package]
name = "aurix"
version = "0.2.0"
description = "Aurix — local-first DeFi analytics desktop application"
authors = ["Caner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aurix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# M2.0 — persistence layer (rusqlite + tokio-rusqlite + r2d2 + refinery per
# context/references/sqlite-rust-production-patterns.md). bundled feature
# compiles SQLite from source so the binary is reproducible across user
# machines and does not depend on a system-installed libsqlite3.
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
tokio-rusqlite = "0.5"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
refinery = { version = "0.8", features = ["rusqlite"] }
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
